--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.5
+  carousel_slider: ^4.2.1
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -43,9 +46,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -58,16 +60,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+   - family: Lora
+     fonts:
+       - asset: fonts/Lora-VariableFont_wght.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+   - family: Din
+     fonts:
+       - asset: fonts/DIN-Bold.ttf
+       - asset: fonts/DIN-Light.ttf
+       - asset: fonts/DIN-Medium.ttf
+   - family: Merri
+     fonts:
+       - asset: fonts/Merriweather-Bold.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
