--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,11 @@ dependencies:
   cupertino_icons: ^1.0.5
   carousel_slider: ^4.2.1
   webview_flutter: ^3.0.4
+  firebase_storage: ^11.2.4
+  cloud_firestore: ^4.8.2
+  path_provider: ^2.0.15
+  provider: ^6.0.5
+  firebase_core: ^2.14.0
 
 dev_dependencies:
   flutter_test:
