--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   carousel_slider: ^4.2.1
   webview_flutter: ^3.0.4
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
