--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.denisondiningapp">
+    package="com.weMakeApp.denisonDining">
    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
    <application
