--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>helloworld</string>
+	<string>Denison Dining</string>
 <key>CFBundleDisplayName</key>
-<string>helloworld</string>
+<string>Denison Dining</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
