--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher: ^6.1.5
   cupertino_icons: ^1.0.5
   carousel_slider: ^4.2.1
   webview_flutter: ^3.0.4
