--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   provider: ^6.0.5
   firebase_core: ^2.14.0
   change_app_package_name: ^1.1.0
+  flutter_widgetkit: ^1.0.3
+  home_widget: ^0.3.0
 
 dev_dependencies:
   flutter_test:
